fix: UUID serialization and env file security
- Convert UUID objects to strings in public_menu endpoints
- Use string for prices to preserve decimal precision
- Add .env patterns to .gitignore to prevent credential exposure
- This fixes API compatibility and security issues

--- a/CashApp-iOS/CashAppPOS/.gitignore
+++ b/CashApp-iOS/CashAppPOS/.gitignore
@@ -88,6 +88,15 @@ yarn-error.log
 # Expo legacy (not needed)
 Expo.plist
 
+# Environment variables
+.env
+.env.local
+.env.development
+.env.test
+.env.production
+.env.*
+!.env.example
+
 # Node.js build artifacts
 node_modules/**/build/
 
