--- a/CashApp-iOS/CashAppPOS/package.json
+++ b/CashApp-iOS/CashAppPOS/package.json
@@ -20,6 +20,7 @@
     "postinstall": "patch-package"
   },
   "dependencies": {
+    "@fynlo/shared": "file:../../shared",
     "@react-native-async-storage/async-storage": "^1.24.0",
     "@react-native-community/cli-platform-ios": "^12.3.7",
     "@react-native-community/datetimepicker": "^8.4.2",
