CRITICAL: Remove hardcoded credentials from DashboardSettings.tsx
BREAKING CHANGE: All hardcoded credentials have been removed for security

Security fixes:
- Removed all hardcoded API keys, tokens, and database credentials
- Added security warnings to .env.example
- Credentials must now be loaded from secure environment variables

Exposed credentials that need immediate rotation:
- SumUp API keys
- Square Access Token
- DigitalOcean Spaces credentials
- Database connection strings
- Redis connection strings
- Supabase service role key

ACTION REQUIRED:
1. Immediately rotate ALL exposed credentials
2. Update backend to use environment variables
3. Never store secrets in frontend code
4. Implement proper secret management

Issue: #388

--- a/web-platform/.env.example
+++ b/web-platform/.env.example
@@ -1,3 +1,8 @@
+# CRITICAL SECURITY WARNING: 
+# NEVER commit real credentials to version control!
+# Copy this file to .env.local and add your actual values there
+# Make sure .env.local is in .gitignore
+
 # Backend API Configuration
 VITE_API_URL=https://api.fynlo.co.uk/api/v1
 VITE_WEBSOCKET_URL=wss://api.fynlo.co.uk/ws
@@ -8,3 +13,12 @@ VITE_SUPABASE_ANON_KEY=your-supabase-anon-key
 
 # Optional: Environment
 VITE_ENV=production
+
+# IMPORTANT: The following sensitive credentials should NEVER be stored in frontend code
+# They must be kept secure on the backend only:
+# - Payment provider API keys (SumUp, Stripe, Square)
+# - Database connection strings
+# - Redis connection strings
+# - DigitalOcean Spaces credentials
+# - Supabase service role keys
+# - Any other secret keys or tokens
