--- a/CashApp-iOS/CashAppPOS/tsconfig.json
+++ b/CashApp-iOS/CashAppPOS/tsconfig.json
@@ -15,6 +15,7 @@
     "allowJs": true,
     "moduleResolution": "node",
     "allowSyntheticDefaultImports": true,
+    "downlevelIteration": true,
     "baseUrl": ".",
     "paths": {
       "@/*": ["src/*"],
