--- a/backend/.dockerignore
+++ b/backend/.dockerignore
@@ -36,3 +36,12 @@ logs/
 # Local development
 *.local
 *.backup
+
+# Security: Exclude test files with insecure configs or hardcoded passwords
+setup_database.py
+test_*.py
+*test*.py
+# Already removed but listed for documentation:
+# minimal_app.py
+# minimal_server.py
+# simple_main.py
